@@ -18,18 +18,21 @@
 
 package com.hw.langchain.chains.combine.documents.stuff;
 
+import cn.hutool.core.map.MapUtil;
 import com.google.common.collect.Maps;
 import com.hw.langchain.chains.combine.documents.base.BaseCombineDocumentsChain;
 import com.hw.langchain.chains.llm.LLMChain;
 import com.hw.langchain.prompts.base.BasePromptTemplate;
 import com.hw.langchain.schema.Document;
 
+import lombok.var;
 import org.apache.commons.lang3.tuple.Pair;
 
 import reactor.core.publisher.Flux;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static com.hw.langchain.chains.combine.documents.base.BaseUtils.formatDocument;
 import static com.hw.langchain.chains.combine.documents.stuff.StuffUtils.getDefaultDocumentPrompt;
@@ -101,7 +104,7 @@ public class StuffDocumentsChain extends BaseCombineDocumentsChain {
         // Format each document according to the prompt
         List<String> docStrings = docs.stream()
                 .map(doc -> formatDocument(doc, documentPrompt))
-                .toList();
+                .collect(Collectors.toList());
         // Join the documents together to put them in the prompt.
         Map<String, Object> inputs = Maps.filterKeys(kwargs, llmChain.getPrompt().getInputVariables()::contains);
         inputs.put(documentVariableName, String.join(documentSeparator, docStrings));
@@ -113,15 +116,15 @@ public class StuffDocumentsChain extends BaseCombineDocumentsChain {
      */
     @Override
     public Pair<String, Map<String, String>> combineDocs(List<Document> docs, Map<String, Object> kwargs) {
-        var inputs = getInputs(docs, kwargs);
+        Map<String, Object> inputs = getInputs(docs, kwargs);
         // Call predict on the LLM.
-        return Pair.of(llmChain.predict(inputs), Map.of());
+        return Pair.of(llmChain.predict(inputs), MapUtil.empty());
     }
 
     @Override
     public Flux<Pair<String, Map<String, String>>> asyncCombineDocs(List<Document> docs, Map<String, Object> kwargs) {
         var inputs = getInputs(docs, kwargs);
-        return llmChain.asyncPredict(inputs).map(s -> Pair.of(s, Map.of()));
+        return llmChain.asyncPredict(inputs).map(s -> Pair.of(s, MapUtil.empty()));
     }
 
     @Override
